# python-default

./: .pre-commit-config.yaml  LICENSE  README.md  check.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: test.yml
tests/: calculator_test.py
