[project]
name = "python-default"
version = "0.1.0"
description = "Python Template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["tests/*"]
disallow_untyped_defs = false
